@@ -18,7 +18,7 @@ pushURL=parkour.push.url/api
 user=parkourUser
 password=parkourPw
 cert=/path/to/cert.pem
-userList=filename_with_parkour_users
+URL=parkour.domain.tld
 
 [software]
 bclconvert=/path/to/bclconvert
